# humanclaw

./: .gitignore  README.md  index.html  live2d.html  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts
.cargo/: config.toml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  live2d.json
src-tauri/examples/: screenshot_test.rs  ui_elements_debug.rs
src-tauri/skills/general/: SKILL.md
src-tauri/skills/navigate/: SKILL.md
src-tauri/src/: files.rs  lib.rs  live2d_overlay.rs  main.rs
src-tauri/src/ai/: emit.rs  explain.rs  mod.rs  prompt.rs  types.rs
src-tauri/src/ai/claude/: chat.rs  mod.rs  types.rs
src-tauri/src/ai/ollama/: chat.rs  headless.rs  mod.rs  models.rs  types.rs
src-tauri/src/bridge/: character_sync.rs  chat_sync.rs  commands.rs  exec.rs  mod.rs  pairing_token.rs  persona_sync.rs  server.rs  types.rs
src-tauri/src/characters/: fs.rs  mod.rs
src-tauri/src/chat/: fs.rs  memos.rs  mod.rs
src-tauri/src/device/: mod.rs  secrets.rs
src-tauri/src/device/phone/: apps.rs  mod.rs  overlay.rs
src-tauri/src/device/stt/: capture.rs  commands.rs  transcribe.rs
src-tauri/src/live2d_overlay/: draw.rs  mod.rs  resize.rs  types.rs  window.rs
src-tauri/src/memory/: extract.rs  extract_knowledge.rs  fs.rs  knowledge.rs  mod.rs  store.rs
src-tauri/src/model/: explain.rs  history.rs  mod.rs  prompt.rs  shared.rs  types.rs
src-tauri/src/model/claude/: chat.rs  mod.rs  types.rs
src-tauri/src/model/ollama/: chat.rs  headless.rs  mod.rs  models.rs  types.rs
src-tauri/src/network/: commands.rs  delivery.rs  exec.rs  health.rs  mod.rs  server.rs  sse.rs  sse_subscriber.rs  types.rs
src-tauri/src/network/sync/: character.rs  chat.rs  mod.rs  settings.rs  skills.rs
src-tauri/src/ollama/: chat.rs  headless.rs  mod.rs  models.rs  types.rs
src-tauri/src/phone/: apps.rs  mod.rs  overlay.rs  plugin.rs  tools.rs
src-tauri/src/posts/: character_memory.rs  fs.rs  generate.rs  mod.rs  schedule.rs
src-tauri/src/queue/: commands.rs  mod.rs  post_gen.rs  store.rs
src-tauri/src/secrets/: mod.rs
src-tauri/src/session/: commands.rs  mod.rs  store.rs  types.rs
src-tauri/src/skills/: mod.rs  persona_sync.rs  registry.rs
src-tauri/src/skills/create-persona-skill/: SKILL.md
src-tauri/src/skills/create_persona_skill/: SKILL.md
src-tauri/src/social/: config.rs  mod.rs
src-tauri/src/stt/: capture.rs  commands.rs  mod.rs  transcribe.rs  types.rs
src-tauri/src/tools/: ask_user.rs  dispatch.rs  gesture_map.rs  mod.rs  permissions.rs  phone.rs  types.rs
src-tauri/tools/: get_screen.json  press_key.json  tap.json  type_text.json
src-tauri/~/Downloads/: uty.md
(+179 files in other folders)
