[package]
name = "phoneclaw"
version = "0.1.5"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "phoneclaw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# reqwest: HTTP client for calling the Ollama local API
# rustls-tls: pure-Rust TLS backend, avoids OpenSSL cross-compilation issues on Android
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
# tokio: async runtime required by reqwest
tokio = { version = "1", features = ["full"] }
# futures-util: stream helpers (StreamExt) for reading NDJSON chunks
futures-util = "0.3"
# dotenvy: load key=value secret files (e.g. .secrets) into env vars at startup
dotenvy = "0.15"
# uuid: generate unique device IDs and random hash keys (v4 = random)
uuid = { version = "1", features = ["v4"] }
# axum: lightweight embedded HTTP server for the device bridge and ping endpoint
axum = "0.7"
local-ip-address = "0.6.10"
qrcode = "0.14.1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
tauri-plugin-barcode-scanner = "2.4.4"
aes-gcm = "0.10"
tauri-plugin-dialog = "2"

[target.'cfg(not(target_os = "android"))'.dependencies]
tauri-plugin-window-state = "2"
cpal = "0.15"
# keyring: OS-level secure credential storage (Keychain / SecretService / Credential Manager)
keyring = { version = "3", features = ["sync-secret-service", "crypto-openssl", "windows-native", "apple-native"] }
# enigo: cross-platform mouse / keyboard input synthesis
enigo = "0.2"
# screenshots: cross-platform screen capture
screenshots = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"
gtk = "0.18"
gdk = "0.18"
glib = "0.18"
cairo-rs = "0.18"
atspi = { version = "0.19", default-features = false, features = ["tokio"] }

[target.'cfg(target_os = "windows")'.dependencies]
uiautomation = "0.24"

[dev-dependencies]
base64 = "0.22"
image = "0.25.10"
screenshots = "0.8"


